# project-taylor

./: .blackboxrules  .env.example  .gitignore  CONTRIBUTING.md  FRONTEND_ANALYSIS_REPORT.md  LICENSE  README.md  __init__.py  api_validation_results.json  project_structure.md  pytest.ini  railway.json  test.java
common_utils/: logging.py  mcp_client.py  mcp_registry.json  pyproject.toml  utils.py
common_utils/common_utils/: __init__.py
docs/: architecture.md  integration_testing.md  mcp_registry_readme.md
frontend/: README.md  TODO.md  dashboard.html  dashboard.js
infra/: docker-compose.yml
scripts/: test_integration.py
services/ai-copilot-service/: README.md  requirements.txt  run.py
services/email-delivery-service/: .env.example  Dockerfile  README.md  requirements.txt
services/filter-service/: .dockerignore  .env.example  Dockerfile  README.md  railway.json  requirements-dev.txt  requirements.txt
services/github-jobs-service/: .env.example  Dockerfile  README.md  requirements.txt
services/job-scraper-service/: .env.example  Dockerfile  PRODUCTION_READINESS_TODO.md  README.md  SETUP_AND_RUN.md  api_validation_results.json  railway.json  requirements-dev.txt  requirements-prod.txt  requirements.txt  run.py  test_api_validation.py  test_db.py  test_imports.py  test_server.py
services/resume-generator-service/: .env.example  Dockerfile  README.md  SETUP_AND_RUN.md  architecture.md  generated_resume.docx  package.json  requirements-dev.txt  requirements.txt  run.py  test_api.py  test_new_service.py  test_puppeteer.py  (+2 more)
supabase/: config.toml
(+57 files in other folders)
